# challenges

./: Cargo.toml  challenges.code-workspace  release.toml
resources/: assessment_form.xml  assessment_form.yml  ch2_form.xml  gama.xml  m56972.md  m57038.md  m57376.md  m57609.md  m60630.md  m61609.md  m61617.md  query_01.xml  query_01.yml  result.xml  reviews.csv  reviews.html  reviews.md  submissions.csv  themes
src/: main.rs
src/moodle_feedback/: mod.rs
src/reviews/: mod.rs
