[package]
name = "challenges"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
convert_case = "0.8.0"
csv = "1.3.1"
handlebars = "6.3.2"
markdown = "1.0.0"
rand = "0.9.2"
regex = "1.11.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml_ng = "0.10.0"
