[package]
name = "djops"
version = "0.2.5"
edition = "2024"
license = "Some license"
description = "The description"
documentation = "The Documentation"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
convert_case = "0.8.0"
csv = "1.3.1"
handlebars = "6.3.2"
log = { version = "0.4.28", features = ["kv"] }
markdown = "1.0.0"
rand = "0.9.2"
regex = "1.11.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml_ng = "0.10.0"
simplelog = "0.12.2"
